tests/reject/variadic_spread_mixed.ty
fn sum(xs: ...int) -> int:
    return 0
fn main():
    a := [1]
    print(str(sum(1, a...)))
